# lfp-skopeo-inspect

./: pyproject.toml
<class 'pathlib._local.Path'>/: cache.db
src/lfp_skopeo_inspect/: app.py
