[project]
name = "lfp-skopeo-inspect"
version = "0.1.0"
description = "REST wrapper around skopeo inspect"
requires-python = ">=3.12"
dependencies = ["fastapi", "uvicorn", "dynaconf", "filelock", "diskcache"]

[project.scripts]
skopeo-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
